# refactor/src/main/java/com/mhe/dev/logic/stack/core/logic/model/DecisionTree.java
@@ -1,4 +1,4 @@
-package com.mhe.dev.logic.stack.core.logic;
+package com.mhe.dev.logic.stack.core.logic.model;
 
 import com.mhe.dev.logic.stack.core.graphviz.GraphVizNode;
 
@@ -6,13 +6,13 @@ import com.mhe.dev.logic.stack.core.graphviz.GraphVizNode;
  * DecisionTree.
  */
 public interface DecisionTree extends GraphVizNode {
-    String toJsonString();
-
     DecisionTreeType getType();
 
     boolean isLeaf();
 
     boolean getLeafValue();
+
+    DecisionTree getSubDecisionTree(boolean value);
 
     String getLiteral();
 
